// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<HeaderBar
  className=""
  hideBorder={false}
  icon="cactus"
  image=""
  onIconClick={[Function]}
  title="Cactus settings"
>
  <div
    className="display:flex flex:column flex:0-auto color:white border-color:brand border:bottom border:2"
  >
    <div
      className="display:flex flex:items-center flex:44px padding-x:7"
    >
      <FontIcon
        className="text-color:brand"
        color=""
        group="module"
        icon="cactus"
        onClick={[Function]}
        size="25px"
        style={Object {}}
      >
        <span
          className="icon-module:cactus text-color:brand"
          onClick={[Function]}
          style={
            Object {
              "color": "",
              "fontSize": "25px",
            }
          }
        />
      </FontIcon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7"
      >
        Cactus settings
      </div>
    </div>
  </div>
</HeaderBar>
`;

exports[`renders with buttons 1`] = `
<HeaderBar
  className=""
  hideBorder={false}
  icon="cactus"
  image=""
  onIconClick={[Function]}
  title="Cactus settings"
>
  <div
    className="display:flex flex:column flex:0-auto color:white border-color:brand border:bottom border:2"
  >
    <div
      className="display:flex flex:items-center flex:44px padding-x:7"
    >
      <FontIcon
        className="text-color:brand"
        color=""
        group="module"
        icon="cactus"
        onClick={[Function]}
        size="25px"
        style={Object {}}
      >
        <span
          className="icon-module:cactus text-color:brand"
          onClick={[Function]}
          style={
            Object {
              "color": "",
              "fontSize": "25px",
            }
          }
        />
      </FontIcon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7"
      >
        Cactus settings
      </div>
      <HeaderButton
        className="margin-r:7"
        label="Search"
        onClick={[Function]}
        style={Object {}}
      >
        <Button
          btn="header-button small raised"
          className="margin-r:7"
          onClick={[Function]}
          style={
            Object {
              "flex": "0 0 auto",
            }
          }
        >
          <button
            className="margin-r:7"
            data-btn="header-button small raised"
            onClick={[Function]}
            style={
              Object {
                "flex": "0 0 auto",
              }
            }
          >
            Search
          </button>
        </Button>
      </HeaderButton>
      <HeaderButton
        className=""
        label="Filter"
        onClick={[Function]}
        style={Object {}}
      >
        <Button
          btn="header-button small raised"
          className=""
          onClick={[Function]}
          style={
            Object {
              "flex": "0 0 auto",
            }
          }
        >
          <button
            className=""
            data-btn="header-button small raised"
            onClick={[Function]}
            style={
              Object {
                "flex": "0 0 auto",
              }
            }
          >
            Filter
          </button>
        </Button>
      </HeaderButton>
    </div>
  </div>
</HeaderBar>
`;

exports[`renders with no border 1`] = `
<HeaderBar
  className=""
  hideBorder={true}
  icon="cactus"
  image=""
  onIconClick={[Function]}
  title="Cactus settings"
>
  <div
    className="display:flex flex:column flex:0-auto color:white"
  >
    <div
      className="display:flex flex:items-center flex:44px padding-x:7"
    >
      <FontIcon
        className="text-color:brand"
        color=""
        group="module"
        icon="cactus"
        onClick={[Function]}
        size="25px"
        style={Object {}}
      >
        <span
          className="icon-module:cactus text-color:brand"
          onClick={[Function]}
          style={
            Object {
              "color": "",
              "fontSize": "25px",
            }
          }
        />
      </FontIcon>
      <div
        className="w:100p font:roboto-condensed text-color:neutral-dark size:14 text:left text:truncate text:uppercase padding-x:7"
      >
        Cactus settings
      </div>
    </div>
  </div>
</HeaderBar>
`;
